added a few more styling changes and cleaned up the readme

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,3 +2,9 @@ main {
   width: 90%;
   margin: auto;
 }
+
+/* Do we want to make it a container? */
+.container {
+  max-width: 800px;
+  margin-top: 40px;
+}
