--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,9 @@
 .banner-header {
-  background-color: silver;
+  background-color: #343a40;
   text-align: center;
-  padding: 0.25em;
+  padding: 40px;
+}
+
+h1{
+  color: white;
 }
